--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
     "next": "15.5.3",
+    "next-intl": "^4.3.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "svix": "^1.76.1",
