--- a/components.json
+++ b/components.json
@@ -16,7 +16,8 @@
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks"
+    "hooks": "@/hooks",
+    "shared": "@/shared"
   },
   "registries": {
     "@tailark": "https://tailark.com/r/{name}.json"
